--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
 
 
-    <Toolbar
-        android:id="@+id/mainToolbar"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:background="@color/toolbar_color"
@@ -14,43 +14,19 @@
         android:titleTextColor="@color/text_color2" />
 
 
-    <ru.senya.pixateka.view.viewFullscreen
-        android:id="@+id/fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:visibility="gone" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:background="@color/toolbar_color"
-        android:subtitleTextColor="@color/white"
-        android:visibility="gone"
-        app:title="Photo" />
-
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/mainToolbar">
+        android:layout_below="@+id/toolbar">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:background="@color/rBack"
-            android:id="@+id/main_recycler_view"
+            android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/rBack"
             android:paddingHorizontal="2dp" />
 
-        <TextView
-            android:id="@+id/nothing_is_here"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ничего нет"
-            android:textAlignment="center"
-            android:textColor="@color/text_color"
-            android:textSize="23sp" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
