--- a/app/src/main/res/layout/view_input_field.xml
+++ b/app/src/main/res/layout/view_input_field.xml
@@ -11,11 +11,13 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:errorEnabled="true"
         app:endIconMode="custom"
         app:endIconTint="@color/button">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/m_input"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
