--- a/app/src/main/res/layout/view_item.xml
+++ b/app/src/main/res/layout/view_item.xml
@@ -17,7 +17,7 @@
         android:layout_margin="3dp">
 
         <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/main_image"
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -28,7 +28,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/main_image">
+            android:layout_below="@+id/image">
 
             <TextView
                 android:id="@+id/image_name"
