что то произошло

--- a/app/src/main/res/layout/fullscreen_view_activity.xml
+++ b/app/src/main/res/layout/fullscreen_view_activity.xml
@@ -1,148 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:background="@color/toolbar_color"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="3dp"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white"
-        app:cardCornerRadius="4dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="3dp"
-            android:layout_marginStart="3dp"
-            android:orientation="horizontal">
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/pfp"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginVertical="1dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/pfp"
-                app:riv_corner_radius="80dp" />
-
-            <TextView
-                android:id="@+id/by_user"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="4dp"
-                android:layout_weight="1"
-                android:paddingHorizontal="4dp"
-                android:paddingBottom="4dp"
-                android:text="by user"
-                android:textColor="#4E4E4E"
-                android:textSize="14.3sp" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <include
-        android:id="@+id/included"
-        layout="@layout/view_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="3dp" />
-
     <LinearLayout
-        android:id="@+id/linear0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="4dp"
-        android:layout_marginVertical="5dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tags"
+        <com.google.android.material.appbar.MaterialToolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ИИ считает что это: "
-            android:textAlignment="textStart"
-            android:textColor="#4E4E4E"
-            android:textSize="14.3sp" />
+            android:background="@color/toolbar_color" />
 
-        <TextView
-            android:id="@+id/main_description"
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="desc"
-            android:textAlignment="textStart"
-            android:textColor="#000000"
-            android:textSize="14sp" />
-    </LinearLayout>
+            android:layout_marginHorizontal="3dp"
+            android:layout_marginBottom="1dp"
+            android:background="@color/white"
+            app:cardCornerRadius="4dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        android:padding="3dp"
-        android:translationZ="10dp"
-        app:cardCornerRadius="4dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabs"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                app:tabIndicatorColor="@color/text_color"
-                app:tabIndicatorHeight="3dp"
-                app:tabTextColor="@color/black" />
+                android:layout_marginVertical="3dp"
+                android:layout_marginStart="3dp"
+                android:orientation="horizontal">
 
-            <RelativeLayout
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/pfp"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="4dp"
+                    android:layout_marginVertical="1dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/pfp"
+                    app:riv_corner_radius="80dp" />
+
+                <TextView
+                    android:id="@+id/by_user"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="1"
+                    android:paddingHorizontal="4dp"
+                    android:paddingBottom="4dp"
+                    android:text="by userEntity"
+                    android:textColor="#4E4E4E"
+                    android:textSize="14.3sp" />
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <include
+            android:id="@+id/included"
+            layout="@layout/view_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="3dp" />
+
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/linear0"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginHorizontal="4dp"-->
+        <!--            android:layout_marginVertical="5dp"-->
+        <!--            android:orientation="vertical">-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/tags"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:text="ИИ считает что это: "-->
+        <!--                android:textAlignment="textStart"-->
+        <!--                android:textColor="#4E4E4E"-->
+        <!--                android:textSize="14.3sp" />-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/main_description"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:text="desc"-->
+        <!--                android:textAlignment="textStart"-->
+        <!--                android:textColor="#000000"-->
+        <!--                android:textSize="14sp" />-->
+        <!--        </LinearLayout>-->
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:padding="3dp"
+            android:translationZ="10dp"
+            app:cardCornerRadius="4dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    app:tabIndicatorColor="@color/text_color"
+                    app:tabIndicatorHeight="3dp"
+                    app:tabTextColor="@color/black" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/list2"
-                    android:layout_width="match_parent"
+                    android:isScrollContainer="false"
                     android:layout_height="wrap_content"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/nothing_was_found"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:text="Ничего похожего не найдено"
-                    android:textColor="@color/text_color"
-                    android:textSize="20sp"
-                    android:visibility="invisible" />
-            </RelativeLayout>
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+                    android:nestedScrollingEnabled="true" />
 
 
-</LinearLayout>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+
+</androidx.core.widget.NestedScrollView>
 
 
