--- a/app/src/main/res/drawable/background_profile.xml
+++ b/app/src/main/res/drawable/background_profile.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="-90"
-        android:endColor="#FFFFFFFF"
+        android:endColor="#FFFFFF"
         android:type="linear" />
 </shape>
