--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,28 +15,13 @@
             android:layout_height="match_parent">
 
 
-            <Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/text"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="55dp"
                 android:background="@color/toolbar_color"
-                android:gravity="center_horizontal"
-                android:title="@string/search"
-                android:titleTextColor="@color/text_color2" />
-
-            <!--            <SearchView-->
-            <!--                android:id="@+id/search"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_below="@+id/text"-->
-            <!--                android:layout_marginStart="7dp"-->
-            <!--                android:layout_marginTop="7dp"-->
-            <!--                android:layout_marginEnd="7dp"-->
-            <!--                android:layout_marginBottom="7dp"-->
-            <!--                android:iconifiedByDefault="false"-->
-            <!--                android:queryHint="Введите Ваш запрос"-->
-            <!--                android:textColor="@color/white"-->
-            <!--                android:textSize="16sp" />-->
+                app:title="@string/search"
+                app:titleTextColor="@color/text_color2" />
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/search"
