--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -60,7 +60,7 @@
                 android:translationZ="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@id/list"
+                android:id="@id/recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/button" />
