--- a/app/src/main/res/layout/view_fullscreen.xml
+++ b/app/src/main/res/layout/view_fullscreen.xml
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/list"
+                    android:id="@+id/recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
